--- a/src/components/InstructorInfo/InstructorInfo.css
+++ b/src/components/InstructorInfo/InstructorInfo.css
@@ -14,3 +14,24 @@ img {
 .css-margin {
     margin-left: 240px;
 }
+
+@media (max-width: 1000px) {
+    .heading {
+        font-size: 40px;
+        margin: 0 30px;
+        margin-top: 10px;
+        margin-bottom: 40px;
+    }
+    img {
+        height: 500px;
+        width: 320px;
+        margin: 0;
+        margin-left: 32px;
+        margin-right: 32px;
+        margin-bottom: 40px;
+
+    }
+    .css-margin {
+        margin-left: 32px;
+    }
+}
