--- a/src/components/SubjectSelection/SubjectSelection.css
+++ b/src/components/SubjectSelection/SubjectSelection.css
@@ -8,3 +8,15 @@
     font-size: 85px;
 }
 
+@media (max-width: 700px) {
+    .MediaCard image{
+        max-width: 100px;
+        max-height: 100px;
+    }
+
+    #coursesHeading {
+        margin: 0 30px;
+        font-size: 40px;
+    }
+}
+
